# toolglass

./: .gitignore  README.md  pyproject.toml
dashboard/: .gitignore  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: CostPanel.tsx  EmptyState.tsx  MCPServerPanel.tsx  TraceDetail.tsx  TraceInfoBar.tsx  TraceList.tsx  WaterfallChart.tsx
dashboard/src/hooks/: useTraces.ts
dashboard/src/lib/: api.ts
dashboard/src/types/: index.ts
src/toolglass/: __init__.py  __version__.py
src/toolglass/api/: app.py  routes_cost.py  routes_mcp.py  routes_traces.py
src/toolglass/cli/: main.py
src/toolglass/cost/: __init__.py  attribution.py  pricing.py
src/toolglass/proxy/: http_handler.py  server.py
src/toolglass/trace/: collector.py  mcp_semantics.py  models.py
src/toolglass/utils/: config.py  logging.py
tests/: conftest.py  test_api.py  test_cost.py  test_mcp_semantics.py  test_proxy.py  test_trace.py
